# SRT_time_shifter

./: CMakeLists.txt  LICENSE  README.md  main.cc  todo.txt
include/: Subtitle.hpp  Timecode.hpp  process_input.hpp
sample/: sample.srt
src/: CMakeLists.txt  Subtitle.cpp  Subtitle.test.cpp  Timecode.cpp  Timecode.test.cpp  process_input.cpp  process_input.test.cpp  timecode_str_identifier.hpp  timecode_str_identifier.test.cpp
